@@ -1,3 +1,7 @@
+2002-11-07  Masatake YAMATO  <yamato@redhat.com>
+
+	* spline.[ch]: Removed unused ifdefs.
+
 2002-10-29  Martin Weber <martweb@gmx.net>
 
 	* fit.c: fix code broken by Masatake at 
